# audiolyzer

./: .gitignore  Cargo.toml  README.md  output.txt
examples/: audio-sample.rs  devices.rs  sample.rs
src/: app.rs  audio_thread.rs  display.rs  fft.rs  lib.rs  main copy.rs  main.rs  ui.rs
src/fft/: mod.rs
src/inputs/: events.rs  key.rs
